# syslog-ng

lib/: Makefile.am  afinter.c  apphook.c  cfg-grammar.y  cfg-lexer.c  cfg-parser.c  cfg-tree.c  cfg-tree.h  cfg.c  logmpx.c  logmpx.h  logsource.c  logsource.h  logthrdestdrv.c  mainloop-io-worker.c  mainloop-worker.c  mainloop-worker.h  mainloop.c  scratch-buffers2.c  scratch-buffers2.h
lib/logmsg/: logmsg.c  logmsg.h
lib/scanner/kv-scanner/: kv-scanner.c  kv-scanner.h
lib/scanner/kv-scanner/tests/: test_kv_scanner.c
lib/stats/: stats-counter.h  stats-registry.c
lib/tests/: Makefile.am  test_channel_junction.c
modules/: Makefile.am
modules/affile/: affile-grammar.ym
modules/affile/tests/: Makefile.am  test_wildcard_source.c
modules/afsql/: afsql.c
modules/cparser/: CMakeLists.txt  Makefile.am  cparser-grammar.ym  cparser-parser.c  cparser-parser.h  cparser-plugin.c  cparser.c  cparser.h
modules/diskq/tests/: test_diskq.c
modules/generator-source/: Makefile.am  generator-source-grammar.ym  generator-source-parser.c  generator-source-parser.h  generator-source-plugin.c  generator.c  generator.h
modules/linux-kmsg-format/: linux-kmsg-format.c
modules/snmptrapd-parser/: Makefile.am  snmptrapd-parser-grammar.ym  snmptrapd-parser-parser.c  snmptrapd-parser-parser.h  snmptrapd-parser-plugin.c  snmptrapd-parser.c  snmptrapd-parser.h  varbindlist-scanner.c  varbindlist-scanner.h
modules/snmptrapd-parser/tests/: Makefile.am  test_snmptrapd_parser.c  test_varbindlist_scanner.c
scl/: Makefile.am
scl/snmp-source/: snmp-source.conf
scl/snmptrapd-source/: snmptrapd-source.conf
syslog-ng/: main.c
tests/copyright/: policy
tests/functional/: func_test.py
tests/functional_tests/functional_tests/test_examples/: test_new_file_source.py
tests/functional_tests/source/driver_io/file/: common.py  writer.py
(+6 files in other folders)
